<resources>
    <string name="app_name">LionCheckin</string>
    <string name="attendance_tracker" />
    <string name="good_morning" />
    <string name="today_s_schedule" />
    <string name="comp_100_9_00_am" />
    <string name="mark_attendance" />
    <string name="attendance_summary" />
    <string name="comp_100" />
    <string name="_100" />
    <string name="comp_200" />
    <string name="date_01_03_2023" />
    <string name="class_comp_100" />


    <string name="class_details_classname">Class Name</string>
    <string name="add_students_button">Add students</string>
    <string name="open_reports_button">Open Reports</string>
    <string name="textview_quick_attendance">Quick Attendance</string>
    <string name="class_details_submitButton">Submit</string>

    <string name="textView_add_student">Add Student</string>
    <string name="add_student_studentName">Student Name</string>
    <string name="add_student_studentID">Student ID</string>
    <string name="add_student_cancelButton">Cancel</string>
    <string name="add_student_addButton">Add</string>

    <string name="signup_Title">Sign Up</string>
    <string name="button_signup">Sign Up</string>



    <string name="loginPage_Title">Login Page</string>
    <string name="button_login">Login</string>
    <string name="addClassFloatingButton">Add Class</string>
    <string name="toolbar_add_class" >Create Class</string>
    <string name="textview_add_class">Create Class</string>
    <string name="add_class_comment">Create new class to manage daily attendance and report them. Add students in the next step</string>
    <string name="general_settings" />
    <string name="default_attendance" />
    <string name="initializing">...initializing...</string>
</resources>