<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_class_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MainBack">

    <TextView
        android:id="@+id/textView_add_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/textView_add_student"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"

        />

    <EditText
        android:id="@+id/add_student_studentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:hint="@string/add_student_studentName"
        app:layout_constraintTop_toBottomOf="@id/textView_add_student"
        />

    <EditText
        android:id="@+id/add_student_studentID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_student_studentID"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/add_student_studentName"
        app:layout_constraintLeft_toLeftOf="@id/add_student_studentName"/>

    <Button
        android:id="@+id/add_student_cancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:text="@string/add_student_cancelButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_student_studentID"
        app:layout_constraintRight_toLeftOf="@id/add_student_addButton"
        />

    <Button
        android:id="@+id/add_student_addButton"
        android:text="@string/add_student_addButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/add_student_studentID"
        app:layout_constraintLeft_toRightOf="@id/add_student_cancelButton"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>