<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- App Name -->
        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attendance_tracker"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>

    <!-- Welcome Message -->
    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_layout"
        android:padding="16dp"
        android:text="@string/good_morning"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <!-- Today's Schedule -->
    <LinearLayout
        android:id="@+id/schedule_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_message"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/schedule_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/today_s_schedule"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/schedule_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp_100_9_00_am"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <!-- Mark Attendance Button -->
    <Button
        android:id="@+id/mark_attendance_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/schedule_layout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/mark_attendance"
        android:textSize="18sp" />

    <!-- Attendance Summary -->
    <LinearLayout
        android:id="@+id/attendance_summary_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mark_attendance_button"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/attendance_summary_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attendance_summary"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <!-- Subject 1 -->
        <LinearLayout
            android:id="@+id/subject_1_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/subject_1_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/comp_100"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/subject_1_percentage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/subject_1_attendance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_100"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <!-- Subject 2 -->
        <LinearLayout
            android:id="@+id/subject_2_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/subject_2_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/comp_200"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/subject_2_percentage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/subject_2_attendance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_100"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>




</RelativeLayout>