<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/class_details_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MainBack">


    <TextView
        android:id="@+id/class_details_classname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/class_details_classname"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintEnd_toStartOf="@+id/settings_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:text="Settings"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textview_quick_attendance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_students_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_students_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:text="@string/add_students_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/class_details_classname"
        app:layout_constraintRight_toLeftOf="@id/settings_button"
        />



    <TextView
        android:id="@+id/textview_quick_attendance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/textview_quick_attendance"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintTop_toBottomOf="@id/add_students_button"
        app:layout_constraintStart_toStartOf="@id/class_details_classname"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/class_details_students_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@id/class_details_submitButton"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_quick_attendance"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/student_list_item" />

    <Button
        android:id="@+id/class_details_submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/class_details_submitButton"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>